converting if block for compactor into separate if statements for ease of reading
Signed-off-by: Ken Haines <khaines@microsoft.com>

--- a/templates/compactor-statefulset.yaml
+++ b/templates/compactor-statefulset.yaml
@@ -1,4 +1,5 @@
-{{- if and .Values.compactor.enabled | eq .Values.config.storage.engine "blocks" -}}
+{{- if eq .Values.config.storage.engine "blocks" -}}
+{{- if .Values.compactor.enabled -}}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -144,4 +145,5 @@ spec:
             {{- if .Values.compactor.env }}
               {{- toYaml .Values.compactor.env | nindent 12 }}
             {{- end }}
+{{- end -}}
 {{- end -}}
