add grpc ports to store gateway pods and service
Signed-off-by: Ken Haines <khaines@microsoft.com>

--- a/templates/store-gateway-svc.yaml
+++ b/templates/store-gateway-svc.yaml
@@ -22,6 +22,10 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
+    - port: {{ .Values.store_gateway.service.grpc_port }}
+      protocol: TCP
+      name: grpclb
+      targetPort: grpc      
   selector:
     app: {{ template "cortex.name" . }}-store-gateway
     release: {{ .Release.Name }}
