--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -42,27 +42,27 @@ data:
         }
 
         location = /api/prom/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local$request_uri;
+          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local:8080$request_uri;
         }
 
         location ~ /api/prom/configs/.* {
-          proxy_pass      http://cortex-configs.observability.svc.cluster.local$request_uri;
+          proxy_pass      http://cortex-configs.observability.svc.cluster.local:8080$request_uri;
         }
 
         location ~ /api/prom/alertmanager/.* {
-          proxy_pass      http://cortex-alertmanager.observability.svc.cluster.local$request_uri;
+          proxy_pass      http://cortex-alertmanager.observability.svc.cluster.local:8080$request_uri;
         }
 
         location = /ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local$request_uri;
+          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local:8080$request_uri;
         }
 
         location = /all_user_stats {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local$request_uri;
+          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local:8080$request_uri;
         }
 
         location ~ /api/prom/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.cluster.local$request_uri;
+          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.cluster.local:8080$request_uri;
         }
       }
     }
