--- a/values.yaml
+++ b/values.yaml
@@ -14,6 +14,9 @@ image:
   # pullSecrets:
   #   - myRegistrKeySecretName
 
+## Kubernetes cluster DNS domain
+clusterDomain: cluster.local
+
 ingress:
   enabled: true
   annotations:
