Updated templates to use clusterDomain
Signed-off-by: Drew Bowering <Drew.Bowering@EPL.CA>

--- a/templates/querier-dep.yaml
+++ b/templates/querier-dep.yaml
@@ -59,12 +59,12 @@ spec:
           args:
             - "-target=querier"
             - "-config.file=/etc/cortex/cortex.yaml"
-            - "-querier.frontend-address={{ template "cortex.fullname" . }}-query-frontend-headless.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.query_frontend.service.grpc_port}}"
+            - "-querier.frontend-address={{ template "cortex.fullname" . }}-query-frontend-headless.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.query_frontend.service.grpc_port}}"
             {{- if .Values.memcached.enabled }}
-            - "-store.chunks-cache.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached.{{ .Release.Namespace }}.svc.cluster.local:11211"
+            - "-store.chunks-cache.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:11211"
             {{- end }}
             {{- if index .Values "memcached-index-read" "enabled" }}
-            - "-store.index-cache-read.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached-index-read.{{ .Release.Namespace }}.svc.cluster.local:11211"
+            - "-store.index-cache-read.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached-index-read.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:11211"
             {{- end }}
           {{- range $key, $value := .Values.querier.extraArgs }}
             - "-{{ $key }}={{ $value }}"
