Add cluster DNS domain value (#63)
* Added clusterDomain value

Signed-off-by: Drew Bowering <Drew.Bowering@EPL.CA>

* Updated templates to use clusterDomain

Signed-off-by: Drew Bowering <Drew.Bowering@EPL.CA>

--- a/values.yaml
+++ b/values.yaml
@@ -13,6 +13,9 @@ image:
   # pullSecrets:
   #   - myRegistrKeySecretName
 
+## Kubernetes cluster DNS domain
+clusterDomain: cluster.local
+
 ingress:
   enabled: true
   annotations:
